2002-09-12  Roland McGrath  <roland@redhat.com>

	* elf/rtld.c (dl_main) [USE_TLS]: Adjust l_tls_initimage of main
	executable if needed, in case it's actually a shared object.

2002-09-11  Roland McGrath  <roland@redhat.com>

	* elf/dl-load.c (_dl_map_object_from_fd): Use l_addr instead of
	l_map_start to adjust l_tls_initimage.

	* nss/getnssent_r.c (__nss_getent_r): Use EAGAIN instead of errno
	when using h_errno and it's not set to NETDB_INTERNAL.
	* nss/getXXbyYY_r.c [NEED_H_ERRNO]: Likewise.

	* Makefile ($(common-objpfx)testrun.sh): New target.
	(others): Depend on it.
	(postclean-generated): Append it.

	* nss/bug-erange.c: New file.
	* nss/Makefile (tests): Add it.

	* nss/getXXbyYY_r.c (INTERNAL (REENTRANT_NAME)): Return errno
	instead of always EAGAIN when status is NSS_STATUS_TRYAGAIN.

	* sysdeps/generic/dl-environ.c (unsetenv): Redo last fix without
	strncmp, keeps the code smaller for a non-performance-critical case.

	* sysdeps/generic/dl-environ.c (unsetenv): Rewritten using strncmp,
	no longer wrongly matches arbitrary prefixes of NAME.
	Reported by Jakub Jelinek <jakub@redhat.com>.

2002-09-11  Jakub Jelinek  <jakub@redhat.com>

	* posix/bug-regex11.c (tests): New array.
	(main): Rewritten to run more different tests.

2002-09-10  Roland McGrath  <roland@redhat.com>

	* nscd/Makefile (CPPFLAGS-nscd, CPPFLAGS-nscd_conf, CPPFLAGS-dbg_log)
	(CPPFLAGS-connections, CPPFLAGS-hstcache): Variables removed.
	Instead, catch all of $(nscd-modules) via cppflags-iterator.mk.

	* sysdeps/powerpc/fpu/s_isnan.c: Do macro hackery on __GI___isnanf as
	well so we don't get it declared by include/math.h's hidden_proto.
	Then do hidden_proto for __isnanf locally so hidden_def works right.

	* posix/bug-regex5.c (main): Use `union locale_data_value' rather than
	a cast to turn nl_langinfo return value into an integer.

2002-09-10  Isamu Hasegawa  <isamu@yamato.ibm.com>

	* posix/regexec.c (build_trtable): Fix the destination of