@@ -1,5 +1,9 @@
 2002-09-12  Roland McGrath  <roland@redhat.com>
 
+	* elf/rtld.c (_dl_start_final): Move _begin, _end decls outside the fn.
+	(_dl_start) [DONT_USE_BOOTSTRAP_MAP]: Use &_begin instead of l_addr to
+	find the ELF header.
+
 	* elf/rtld.c (dl_main) [USE_TLS]: Adjust l_tls_initimage of main
 	executable if needed, in case it's actually a shared object.
 
